--- a/.env.ejemplo
+++ b/.env.ejemplo
@@ -1,4 +1,69 @@
-TWILIO_ACCOUNT_SID=your_account_sid_here
-TWILIO_AUTH_TOKEN=your_auth_token_here
-TWILIO_WHATSAPP_NUMBER=+your_number_here
-OPENAI_API_KEY=your_openai_key_here
+##  Variables de entorno (.env)
+
+Este archivo `.env` contiene todas las credenciales y configuraciones necesarias para que
+el sistema funcione correctamente. A continuación se describen sus componentes:
+
+###  Twilio – Envío y recepción de mensajes por WhatsApp
+
+Estas variables permiten que el backend se conecte con Twilio para enviar respuestas al usuario
+por WhatsApp Business.
+
+- `TWILIO_WHATSAPP_NUMBER`: Número habilitado para WhatsApp proporcionado por Twilio.
+- `TWILIO_ACCOUNT_SID`: Identificador único de tu cuenta Twilio.
+- `TWILIO_AUTH_TOKEN`: Clave secreta que Twilio usa para autenticar tus peticiones.
+
+> Todas estas credenciales se obtienen desde la consola de Twilio: 
+[https://www.twilio.com/console](https://www.twilio.com/console)
+
+### Redis – Almacenamiento rápido en memoria
+
+Redis se utiliza como base de datos temporal para guardar sesiones, caché y estado de 
+conversaciones.
+
+- `REDIS_HOST`: Dirección del servidor Redis (por defecto `redis` si usas Docker).
+- `REDIS_PORT`: Puerto en el que Redis escucha (usualmente `6379`).
+- `REDIS_PASSWORD`: Contraseña de acceso si está configurada.
+
+Nota importante sobre Redis:
+Si ejecutas esta versión del proyecto tal como está, Redis se conecta usando los siguientes valores predeterminados:
+
+REDIS_HOST=redis  
+REDIS_PORT=6379  
+REDIS_PASSWORD=
+
+Esto funciona solo si Redis fue instalado sin contraseña.
+En caso de que tu instancia tenga clave de acceso, debes especificarla en REDIS_PASSWORD.
+También puedes solicitar esta información directamente a la IA si estás usando un entorno guiado.
+
+
+### OpenRouter – Acceso a modelos LLM como Gemini
+
+Estas variables permiten enviar mensajes a modelos de lenguaje vía OpenRouter.
+
+- `OPENAI_API_KEY`: Clave personal para autenticar solicitudes a OpenRouter.
+- `OPENAI_API_BASE`: Endpoint base de la API REST (`https://openrouter.ai/api/v1`).
+- `LLM_MODEL`: Nombre del modelo a utilizar, por ejemplo: `openrouter/google/gemini-2.5-pro`.
+
+
+> Para obtener tu clave y explorar los modelos disponibles visita 
+[https://openrouter.ai](https://openrouter.ai)
+
+---
+
+⚠️ **Nota**: Este ejemplo usa datos ficticios. Nunca compartas tus claves reales en repositorios 
+públicos. Usa un archivo `.env.example` para mostrar estructura sin exponer credenciales.
+
+# Twilio credentials 
+TWILIO_WHATSAPP_NUMBER=your_twilio_number
+TWILIO_ACCOUNT_SID=your_account_sid
+TWILIO_AUTH_TOKEN=your_auth_token
+
+# Redis config 
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=your_redis_password
+
+# OpenRouter API
+OPENAI_API_KEY=your_openai_key
+OPENAI_API_BASE=https://openrouter.ai/api/v1
+LLM_MODEL=openrouter/google/gemini-2.5-pro
