--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
 
+# Twilio credentials
+TWILIO_WHATSAPP_NUMBER=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+
+# Redis config
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+
+# OpenRouter
+OPENAI_API_KEY=
+OPENAI_API_BASE=
+LLM_MODEL=
